tests/baselines/reference/parserAccessors6(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserAccessors6.ts(2,14): error TS1183: An implementation cannot be declared in ambient contexts.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserAccessors6.ts (1 errors) ====
    declare class C {
      set foo(v) { }
                 ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
    }